--- a/src/main/webapp/WEB-INF/vm/hr_index.vm
+++ b/src/main/webapp/WEB-INF/vm/hr_index.vm
@@ -28,7 +28,7 @@
 					<option value="">北京</option>
 				</select>
 			</div>
-			<div class="m-nav">
+			<div class="m-nav" style="width:600px">
 				<ul class="nav nav-tabs">
 					<li id="firstpage" class="active">
 						<a href="/login">首页</a>
