--- a/src/main/webapp/WEB-INF/vm/viewer_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/viewer_manage.vm
@@ -30,12 +30,12 @@
 			</div>
 			<div class="m-nav">
 				<ul class="nav nav-tabs">
-					<li id="firstpage" class="active">
+					<li id="firstpage">
 						<a href="/login">首页</a>
 					</li>
 					<li id="viewsatge"><a href="#">面试平台</a></li>
 					<li id="viewpage"><a href="javascript:void(0);" id="view_list">面试官监控</a></li>
-					<li id="managepage"><a href="javascript:void(0);" id="manage_list">面试官管理</a></li>
+					<li id="managepage" class="active"><a href="javascript:void(0);" id="manage_list">面试官管理</a></li>
 					<li id="stupage"><a href="#">候选人管理</a></li>
 					<li id="phasepage"><a href="javascript:void(0);" id="phase_list">批次管理</a></li>
 				</ul>
