--- a/src/main/webapp/WEB-INF/vm/add_phase.vm
+++ b/src/main/webapp/WEB-INF/vm/add_phase.vm
@@ -12,6 +12,35 @@
 </head>
 <body>
 	<div class="l-fullsreen">
+		<div class="l-nav">
+			<div class="m-title">
+				<h1>校招系统</h1>	
+				<select name="" id="">
+					<option value="">2015秋季校招</option>
+					<option value="">2015秋季校招1</option>
+					<option value="">2015秋季校招2</option>
+					<option value="">2015秋季校招3</option>
+				</select>
+				<select name="" id="">
+					<option value="">北京</option>
+					<option value="">北京</option>
+					<option value="">北京</option>
+					<option value="">北京</option>
+				</select>
+			</div>
+			<div class="m-nav">
+				<ul class="nav nav-tabs">
+					<li id="firstpage">
+						<a href="/login">首页</a>
+					</li>
+					<li id="viewsatge"><a href="#">面试平台</a></li>
+					<li id="viewpage"><a href="javascript:void(0);" id="view_list">面试官监控</a></li>
+					<li id="managepage"><a href="javascript:void(0);" id="manage_list">面试官管理</a></li>
+					<li id="stupage"><a href="#">候选人管理</a></li>
+					<li id="phasepage" class="active"><a href="javascript:void(0);" id="phase_list">批次管理</a></li>
+				</ul>
+			</div>
+		</div>
 		<!-- 内容start -->
 				<div class="l-container m-addbatch">
 					<div class="m-addbatch-hd">
@@ -33,8 +62,8 @@
     							<tbody id="bodyid">
     								<tr>
     									<td>北京</td>
-    									<td><a href="javascript:void(0);" onclick="showView()">添加面试官</a></td>
-    									<td>
+    									<td><a href="javascript:void(0);" onclick="showView('td北京')">添加面试官</a></td>
+    									<td id="td北京">
     										<label class="control-label" for="inputEmail">
     											刘玥
     											<input class="input-mini" type="text" id="inputEmail" placeholder="房间号">
@@ -48,49 +77,37 @@
     											<input class="input-mini" type="text" id="inputEmail" placeholder="房间号">
     										</label>
     									</td>
-                                        <td><a href="#">删除</a></td>
+                                        <td><a href="#" onclick="removetr(this)">删除</a></td>
     				                </tr>
     			                </tbody>
     							</table>
     							<div class="m-addbatch-btn">
-                                	<button type="submit" class="btn btn-success btn-large">保存</button>
+                                	<button type="submit" class="btn btn-success btn-large" onclick="saveviewsAndcitys()">保存</button>
                             	</div> 
     							</div>
     						</div>
     					</div>
 				<div id="allview" class="m-pop alert alert-info" style="display:none">
 					<div class="m-pop-hd">
-						<button type="button" class="close" data-dismiss="alert">&times;</button>
+						<button type="button" class="close" onclick="doclose()">&times;</button>
 					</div>
 					<div class="m-pop-bd">
 						<div class="row-fluid">
+							#foreach($info in $list)
 							<div class="span3">
 								<label class="checkbox inline">
-								  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
+								  <input type="checkbox" name="viewnames" id="$info.id" value="$info.userName">$info.userName
 								</label>
 							</div>
-							<div class="span3">
-								<label class="checkbox inline">
-								  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-								</label>
-							</div>
-							<div class="span3">
-								<label class="checkbox inline">
-								  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-								</label>
-							</div>
-							<div class="span3">
-								<label class="checkbox inline">
-								  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-								</label>
-							</div>
+							#end
+							<input type="hidden" id="viewid" value=""/>
 						</div>
 					</div>
 					<div class="m-pop-ft">
 						<div class="control-group">
 							<div class="controls text-center">
-							  <button type="submit" class="btn">保存</button>
-							  <button type="button" class="btn btn-primary" disabled>取消</button>
+							  <button type="button" class="btn" onclick="doaddview()">保存</button>
+							  <button type="button" class="btn btn-primary" onclick="doclose()">取消</button>
 							</div>
 						</div>
 					</div>
