--- a/src/main/webapp/WEB-INF/vm/hr_index.vm
+++ b/src/main/webapp/WEB-INF/vm/hr_index.vm
@@ -15,13 +15,13 @@
 		<div class="l-nav">
 			<div class="m-title">
 				<h1>校招系统</h1>	
-				<select name="" id="">
+				<select name="" id="phase">
 					<option value="">2015秋季校招</option>
 					<option value="">2015秋季校招1</option>
 					<option value="">2015秋季校招2</option>
 					<option value="">2015秋季校招3</option>
 				</select>
-				<select name="" id="">
+				<select name="" id="city">
 					<option value="">北京</option>
 					<option value="">北京</option>
 					<option value="">北京</option>
