--- a/src/main/webapp/WEB-INF/vm/viewer_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/viewer_manage.vm
@@ -135,7 +135,7 @@
 					<div class="modal-footer" style="text-align:center;">
 								<div>
 								  <button id="addview" type="button" class="btn ">保存</button>
-								  <button type="button" class="btn " onclick="alert(123);doclose()">取消</button>
+								  <button type="button" class="btn " onclick="doclose()">取消</button>
 								</div>
 					</div>
 				</div>
