--- a/src/main/webapp/WEB-INF/vm/student_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/student_manage.vm
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/static/css/module.css" />
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
+	<script type="text/javascript" src="/static/js/recruit/student_manage.js"></script>
 </head>
 <body>
 	<div class="l-fullsreen">
@@ -33,7 +34,7 @@
 					<div class="m-studentmanage">
 						<div class="m-studentmanage-hd">
 							<button class="btn btn-info" type="button">添加面试官</button>
-							<button class="btn btn-info" type="button">批量导入</button>
+							<button class="btn btn-info" type="button" id="doimport">批量导入</button>
 							<span class="iconbox">
 								<i class="icon success"></i>
 								<span class="text">正在面试</span>
@@ -151,7 +152,7 @@
 	</div>
 
 	<!-- 内容start -->
-				<div class="m-pop alert alert-info">
+				<div class="m-pop alert alert-info" style="display:none">
 					<button type="button" class="close" data-dismiss="alert">&times;</button>
 					<div class="m-pop-hd">
 						<b>分配面试</b>
@@ -284,5 +285,19 @@
 				</div>
 				
 				<!-- 内容end -->
+			   	<div id="selectfile" class="l-inner modal hide fade in" style="display:none;">
+					<div class="modal-header" style="text-align:center">
+        				<a class="close" data-dismiss="modal" onclick="doclose()">×</a>
+        				<h3>导入</h3>
+    				</div>
+					<div class="modal-body">
+						<form id="impform" class="form-horizontal" action="/hr/importStudentInfos" method="post" enctype="multipart/form-data">
+                			<div class="control-group">
+								<input type="file" name="fileField" id="fileField" style="width:400px;"/>
+							  <input type='submit' id="import" class='btn btn-primary' value='导入' />
+							</div>
+						</form>
+					</div>
+		</div>
 </body>
 </html>
